--- a/style.css
+++ b/style.css
@@ -386,7 +386,7 @@ nav .fa-solid{
     padding: 0 30px 0 15px;
     font-size: 18px;
     border-radius: 20px;
-    background: #3333f7;
+    background: #75757c;
     position: relative;
     transition: 0.3s;
 }
